--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>ToDo App</title>
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <form class="input-form" action="">
-          <input
-            class="input-zone"
-            placeholder="Enter your task"
-            type="text"
-            required
-          />
-          <input class="add-btn" type="submit" value="Add task" />
-        </form>
-      </header>
-      <div id="taskCounter">
-        <span></span>
-      </div>
-      <main class="tasks">
-        <ul id="tasks"></ul>
-      </main>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>ToDo App</title>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <form class="input-form" action="">
+        <input class="input-zone" placeholder="Enter your task" type="text" required />
+        <input class="add-btn" type="submit" value="Add task" />
+      </form>
+    </header>
+    <div id="taskCounter">
+      <span></span>
     </div>
-    <script src="test.js"></script>
-  </body>
+    <main class="tasks">
+      <ul id="tasks"></ul>
+    </main>
+    <button onclick="resetTasks()">Reset</button>
+  </div>
+  <script src="test.js"></script>
+</body>
+
 </html>
